--- a/android_app/app/src/main/res/layout/fragment_upload.xml
+++ b/android_app/app/src/main/res/layout/fragment_upload.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/upload_parent_view"
     style="@style/Theme.WallpaperWizard.Fullscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
 
     <com.ortiz.touchview.TouchImageView
@@ -16,46 +15,24 @@
     <View
         android:id="@+id/scroll_overlay"
         android:layout_width="match_parent"
-        android:layout_height="300px"
-        android:layout_above="@+id/add_tags_layout"
+        android:layout_height="300dp"
+        android:layout_above="@+id/upload_tag_group"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="0dp"/>
-    <LinearLayout
-        android:id="@+id/add_tags_layout"
+        android:layout_marginBottom="-270dp" />
+
+
+    <com.example.wallpaperwizard.Components.TagGroup.TagGroup
+        android:id="@+id/upload_tag_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="500dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/heebo"
-            android:shadowColor="@color/black"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="10"
-            android:text="@string/tags"
-            android:textColor="@color/white"
-            android:textSize="10pt"
-            android:textStyle="bold">
-
-
-        </TextView>
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/tag_group"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:singleLine="false" />
-    </LinearLayout>
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="270dp"
+        app:editable="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/upload_wallpaper"
@@ -78,5 +55,4 @@
         android:layout_marginBottom="48dp"
         android:backgroundTint="@color/white"
         android:src="@drawable/baseline_save_24" />
-
 </RelativeLayout>
