--- a/android_app/app/src/main/res/layout/tag_group_layout.xml
+++ b/android_app/app/src/main/res/layout/tag_group_layout.xml
@@ -4,22 +4,49 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
+        
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/heebo"
-            android:shadowColor="@color/black"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="10"
-            android:text="@string/tags"
-            android:textColor="@color/white"
-            android:textSize="10pt"
-            android:textStyle="bold">
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="start"
+            android:padding="20px">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/heebo"
+                    android:shadowColor="@color/black"
+                    android:shadowDx="0"
+                    android:shadowDy="0"
+                    android:shadowRadius="10"
+                    android:text="@string/tags"
+                    android:textColor="@color/white"
+                    android:textSize="10pt"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:gravity="center"/>
+                <EditText
+                    android:id="@+id/tag_group_search_input"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Search"
+                    android:inputType="textFilter"
+                    android:drawableEnd="@drawable/search_24px"
+                    android:layout_marginStart="20dp"
+                    android:background="@drawable/input_background"
+                    android:layout_weight="5"/>
+
+                <ImageButton
+                    android:id="@+id/tag_layout_add"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/add_24px"
+                    android:background="@drawable/input_background"
+                    android:layout_marginStart="20dp"/>
 
 
-        </TextView>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group"
