--- a/android_app/app/src/main/res/values/themes.xml
+++ b/android_app/app/src/main/res/values/themes.xml
@@ -31,7 +31,7 @@
     <style name="Theme.WallpaperWizard.ToggleButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/tag</item>
+        <item name="android:background">@drawable/edit_text</item>
         <item name="android:minWidth">5dp</item>
         <item name="android:minHeight">5dp</item>
         <item name="android:paddingLeft">8dp</item>
