--- a/android_app/app/src/main/res/layout/tag_group_layout.xml
+++ b/android_app/app/src/main/res/layout/tag_group_layout.xml
@@ -10,8 +10,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:gravity="start"
-            android:padding="20px">
+            android:gravity="start">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -25,7 +24,8 @@
                     android:textSize="10pt"
                     android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:paddingHorizontal="5dp"/>
                 <EditText
                     android:id="@+id/tag_group_search_input"
                     android:layout_width="wrap_content"
