--- a/android_app/app/src/main/res/layout/fragment_home.xml
+++ b/android_app/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/arimo"
+                    android:paddingHorizontal="5dp"
                     android:shadowColor="@color/black"
                     android:shadowDx="0"
                     android:shadowDy="0"
@@ -62,6 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/arimo"
+                    android:paddingHorizontal="10dp"
                     android:shadowColor="@color/black"
                     android:shadowDx="0"
                     android:shadowDy="0"
@@ -85,42 +87,51 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.7">
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:shadowColor="@color/black"
-                    android:shadowDx="0"
-                    android:shadowDy="0"
-                    android:shadowRadius="10"
-                    android:text="@string/sync"
-                    android:textColor="@color/white"
-                    android:textSize="10pt"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/heebo" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/sync_input"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/input_background"
-                    android:fontFamily="@font/arimo"
-                    android:hint="@string/sync" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:shadowColor="@color/black"
+                        android:shadowDx="0"
+                        android:shadowDy="0"
+                        android:shadowRadius="10"
+                        android:text="@string/sync"
+                        android:paddingHorizontal="5dp"
+                        android:textColor="@color/white"
+                        android:textSize="10pt"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/heebo" />
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/sync_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/input_background"
+                        android:fontFamily="@font/arimo"
+                        android:hint="@string/sync" />
+                </LinearLayout>
+
 
                 <com.example.wallpaperwizard.Components.TagGroup.TagGroup
                     android:id="@+id/tag_group"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginTop="20dp"
-
                     app:editable="false" />
 
             </LinearLayout>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/applyConfig"
-                style="@style/Widget.MaterialComponents.FloatingActionButton"
+                style="@style/Theme.WallpaperWizard.FloatingActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -134,7 +145,8 @@
                 android:src="@drawable/baseline_save_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:rippleColor="#FFFFFF" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
