--- a/android_app/app/src/main/res/layout/fragment_upload.xml
+++ b/android_app/app/src/main/res/layout/fragment_upload.xml
@@ -11,6 +11,7 @@
         android:id="@+id/wallpaper_preview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#99000000"
         android:nestedScrollingEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +51,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/upload_wallpaper"
+        style="@style/Theme.WallpaperWizard.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -65,6 +67,7 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/select_wallpaper"
+        style="@style/Theme.WallpaperWizard.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
