--- a/android_app/app/src/main/res/values/themes.xml
+++ b/android_app/app/src/main/res/values/themes.xml
@@ -12,7 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
     </style>
 
     <style name="Theme.WallpaperWizard.Fullscreen">
@@ -40,5 +39,9 @@
         <item name="android:paddingBottom">2dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">8pt</item>
+    </style>
+
+    <style name="Theme.WallpaperWizard.FloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="borderWidth">0dp</item>
     </style>
 </resources>
