--- a/android_app/app/src/main/res/layout/wallpaper_thumbnail_item.xml
+++ b/android_app/app/src/main/res/layout/wallpaper_thumbnail_item.xml
@@ -1,14 +1,31 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/wallpaper_thumbnail_item_layout"
     android:layout_width="match_parent"
     android:layout_height="500px"
+    android:layout_marginVertical="5px"
     android:layout_marginLeft="5px"
     android:layout_marginRight="5px"
-    android:layout_marginVertical="5px"
     android:gravity="center_vertical">
 
-<ImageView
-    android:id="@+id/wallpaper_thumbnail_item_image_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scaleType="centerCrop"/>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="@android:color/transparent">
+
+        <ImageView
+            android:id="@+id/wallpaper_thumbnail_item_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/image_view_background" />
+    </androidx.cardview.widget.CardView>
+
 </FrameLayout>
