--- a/android_app/app/src/main/res/layout/fragment_edit.xml
+++ b/android_app/app/src/main/res/layout/fragment_edit.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintTop_toBottomOf="@id/edit_fragment_tag_layout" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/applyConfig"
+                android:id="@+id/edit_fragment_edit_wallpaper_fab"
                 style="@style/Theme.WallpaperWizard.FloatingActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginBottom="48dp"
                 android:backgroundTint="@color/white"
-                android:contentDescription="@string/applyConfig"
+                android:contentDescription="@string/edit_wallpaper"
                 android:scaleType="center"
                 android:src="@drawable/baseline_edit_24"
                 app:layout_constraintBottom_toBottomOf="parent"
