--- a/android_app/app/src/main/res/layout/fragment_edit.xml
+++ b/android_app/app/src/main/res/layout/fragment_edit.xml
@@ -7,6 +7,7 @@
     tools:context=".Fragments.EditFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/edit_fragment_swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
