limit text in lines and characters on sync and search

--- a/android_app/app/src/main/res/layout/fragment_home.xml
+++ b/android_app/app/src/main/res/layout/fragment_home.xml
@@ -116,6 +116,8 @@
                         android:layout_marginStart="10dp"
                         android:background="@drawable/input_background"
                         android:fontFamily="@font/arimo"
+                        android:maxLines="1"
+                        android:maxLength="20"
                         android:hint="@string/sync" />
                 </LinearLayout>
 
